--- a/styles/index.css
+++ b/styles/index.css
@@ -19,8 +19,6 @@ html {
   flex-direction: column;
 }
 .root {
-  /* display: grid;
-  grid-template-columns: 1fr 5fr; */
   display: flex;
 }
 
@@ -73,19 +71,18 @@ html {
 
 .components > a {
   padding: 0.5rem;
-  margin: 0.5rem;
-  display: inline;
+  display: block;
   text-decoration: none;
   color: var(--gray-600);
   font-size: 1rem;
   font-weight: bold;
+  max-width: 100%;
 }
 
 .components > a:hover {
   background-color: #dbff4d;
   border-radius: 0.2rem;
   color: var(--gray-600);
-  box-shadow: rgba(33, 35, 38, 0.1) 0px 12px 10px -10px;
 }
 
 code {
@@ -106,6 +103,12 @@ code {
   border-top: 1px solid whitesmoke;
   color: var(--gray-600);
   text-align: center;
+}
+
+.getstarted {
+  max-width: 95%;
+  margin-left: auto;
+  margin-right: auto;
 }
 .headings {
   margin-top: 2rem;
@@ -154,6 +157,10 @@ code {
   color: var(--gray-600);
 }
 
+.main {
+  max-width: 100%;
+}
+
 .repo {
   cursor: pointer;
   padding-right: 1rem;
@@ -173,14 +180,13 @@ code {
 .side-nav {
   padding: 2rem;
   position: sticky;
-  position: -webkit-sticky;
   top: 0px;
   height: 100%;
 }
 
 @media screen and (max-width: 815px) {
   .doc-outline {
-    max-width: 65%;
+    max-width: 85%;
     margin-left: auto;
     margin-right: auto;
   }
@@ -197,14 +203,34 @@ code {
   }
   .side-nav {
     display: none;
+    position: absolute;
+    top: 5rem;
+    background-color: white;
   }
   .snippet {
     margin-left: auto;
     margin-right: auto;
-    max-width: 60%;
+    max-width: 95%;
   }
   .root {
     grid-template-columns: 1fr;
+  }
+
+  /* to make components respnsive */
+  .nav-link {
+    display: none;
+  }
+  .nav-link.nav-brandlogo {
+    display: block;
+  }
+  .form-input.outlined {
+    max-width: 100%;
+  }
+  .snackbar {
+    max-width: 100%;
+  }
+  .rating {
+    max-width: 100%;
   }
 }
 
@@ -212,4 +238,7 @@ code {
   .buttons {
     max-width: 92%;
   }
+}
+
+@media screen and (max-width: 784px) {
 }
